deploy/minikube/bff/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: cecochat
  labels:
    app: bff
spec:
  selector:
    matchLabels:
      app: bff
  replicas: 2
  template:
    metadata:
      name: bff
      namespace: cecochat
      labels:
        app: bff
    spec:
      containers:
        - name: bff
          image: ceco.com/cecochat/bff:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
          startupProbe:
            httpGet:
              path: /startupz
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /livez
              port: 443
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 443
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 5
