deploy/minikube/bff/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: cecochat
  labels:
    app: bff
spec:
  selector:
    app: bff
  type: ClusterIP
  ports:
    - port: 443
      name: "https"
