deploy/minikube/bff/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff
  namespace: cecochat
  labels:
    app: bff
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bff.cecochat.com
      secretName: ingress-tls
  rules:
    - host: bff.cecochat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  name: "https"
